deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: web-app
  labels:
    app: web-app
spec:
  replicas: 1
  selector:
    matchLabels:
      app: web-app
  template:
    metadata:
      labels:
        app: web-app
    spec:
      containers:
      - name: web-app
        #image: 980005835410.dkr.ecr.us-east-1.amazonaws.com/test:build_no
        image: abjaldevops/test:build_no
        ports:
        - containerPort: 8080
      imagePullSecrets:
      - name: dockerhubsecret
